<resources>
    <string name="app_name">TechAssist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="getin_to_exploring">Getin to Exploring</string>

    <string name="category_headlines">Headlines</string>
    <string name="category_technology">Technology</string>
    <string name="category_sports">Sports</string>
    <string name="category_business">Business</string>
    <string name="category_world">World</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_science">Science</string>
    <string name="username">username</string>
    <string name="profile">Profile</string>
    <string name="search">Search...</string>
    <string name="welcome_to_explore_world">Welcome to Explore World</string>
    <string name="technology">*  Technology</string>
    <string name="world">*  World</string>
    <string name="business">*  Business</string>
    <string name="login">Login</string>
    <string name="science">* Science</string>
    <string name="change_password">Change Password</string>

    <string name="email">Email</string>
    <string name="skills">Skills</string>
</resources>
