<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bicon"
    android:layout_height="match_parent"
    tools:context=".Fragments.NewsFeedFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/view1"
        android:layout_width="405dp"
        android:layout_height="550dp"
        android:elevation="12dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="20dp"
        tools:targetApi="lollipop">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="502dp"
            android:layout_gravity="center"
            android:padding="8dp">




            <TextView
                android:layout_width="269dp"
                android:layout_height="58dp"
                android:layout_alignBottom="@+id/transfer"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="404dp"
                android:gravity="center"
                android:text="@string/welcome_to_explore_world"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/transfer"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="94dp"
                android:layout_marginLeft="94dp"
                android:layout_marginEnd="188dp"
                android:layout_marginRight="188dp"
                android:layout_marginBottom="337dp"

                android:text="@string/technology"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/transfer"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="95dp"
                android:layout_marginLeft="95dp"
                android:layout_marginEnd="206dp"
                android:layout_marginRight="206dp"

                android:layout_marginBottom="292dp"
                android:text="@string/business"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/world"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/transfer"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="97dp"
                android:layout_marginLeft="97dp"
                android:layout_marginEnd="206dp"
                android:layout_marginRight="206dp"

                android:layout_marginBottom="236dp"
                android:text="@string/world"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/science"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/transfer"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="99dp"
                android:layout_marginLeft="99dp"
                android:layout_marginEnd="202dp"
                android:layout_marginRight="202dp"

                android:layout_marginBottom="193dp"
                android:text="@string/science"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/transfer"
                android:layout_width="197dp"
                android:layout_height="54dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="102dp"
                android:layout_marginLeft="102dp"
                android:layout_marginTop="412dp"
                android:layout_marginEnd="98dp"
                android:layout_marginRight="98dp"
                android:layout_marginBottom="28dp"
                android:background="@drawable/button_main_background"
                android:text="@string/getin_to_exploring"
                android:textColor="@color/colorWhite" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>



    <!--<Button
        android:id="@+id/transfer"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="93dp"
        android:layout_marginRight="93dp"
        android:layout_marginBottom="78dp"
        android:text="@string/getin_to_exploring"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_main_background"/>  -->


</LinearLayout>