<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bicon"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProfileFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/profile_view"
        android:layout_width="375dp"
        android:layout_height="353dp"
        android:elevation="12dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="20dp"
        tools:targetApi="lollipop">

        <TextView
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="149dp"
            android:layout_marginLeft="149dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="167dp"
            android:layout_marginRight="167dp"
            android:text="@string/profile"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="23sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="189dp"
            android:layout_gravity="center"
            android:padding="8dp">


            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/username"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/skills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_image"

                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="41dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:text="@string/skills"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/skillview"
                android:layout_width="306dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_image"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="70dp"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="43dp"
                android:layout_marginEnd="7dp"
                android:layout_marginRight="7dp"
                android:text="skillView"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:src="@mipmap/ic_launcher" />

        </RelativeLayout>

        <Button
            android:id="@+id/edit"
            android:layout_width="276dp"
            android:layout_height="49dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="54dp"
            android:layout_marginLeft="54dp"
            android:layout_marginTop="280dp"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="126dp"
            android:background="@drawable/button_main_background"
            android:text="@string/change_password"

            android:textColor="#fff" />


    </android.support.v7.widget.CardView>

</LinearLayout>