<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bicon"
    tools:context=".RegisterActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="517dp"
        android:layout_below="@id/toolbar"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="78dp"
        android:layout_marginBottom="79dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"

        android:padding="16dp">

        <android.support.v7.widget.CardView
            android:id="@+id/view2"
            android:layout_width="376dp"
            android:layout_height="485dp"
            android:elevation="12dp"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9"
            app:cardCornerRadius="20dp">

            <RelativeLayout
                android:id="@+id/itemsview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">


                <TextView
                    android:layout_width="67dp"
                    android:layout_height="31dp"
                    android:layout_alignTop="@+id/signupicon"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="154dp"
                    android:layout_marginLeft="154dp"
                    android:layout_marginTop="96dp"
                    android:layout_marginEnd="155dp"
                    android:layout_marginRight="155dp"
                    android:layout_marginBottom="332dp"
                    android:text="signup"
                    android:textSize="20sp"
                    android:textStyle="bold" />



                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/signupicon"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_alignParentStart="true"

                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="138dp"
                    android:layout_marginLeft="138dp"
                    android:layout_marginEnd="141dp"
                    android:layout_marginRight="141dp"
                    android:layout_marginBottom="363dp"
                    android:src="@drawable/adduser" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/skills"
                    android:layout_width="342dp"
                    android:layout_height="55dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="345dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginRight="18dp"
                    android:layout_marginBottom="85dp"
                    android:hint="@string/skills"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    app:met_floatingLabel="normal" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/username"
                    android:layout_width="342dp"
                    android:layout_height="55dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="17dp"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="163dp"
                    android:layout_marginEnd="17dp"
                    android:layout_marginRight="17dp"
                    android:layout_marginBottom="267dp"
                    android:hint="@string/username"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    app:met_floatingLabel="normal" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/email"
                    android:layout_width="340dp"
                    android:layout_height="55dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="17dp"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="223dp"
                    android:layout_marginEnd="19dp"
                    android:layout_marginRight="19dp"
                    android:layout_marginBottom="207dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    app:met_floatingLabel="normal" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/password"
                    android:layout_width="343dp"
                    android:layout_height="56dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="285dp"
                    android:layout_marginEnd="17dp"
                    android:layout_marginRight="17dp"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    app:met_floatingLabel="normal" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="256dp"
                    android:layout_height="48dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="60dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="416dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginBottom="21dp"
                    android:background="@drawable/button_main_background"
                    android:text="register"
                    android:textColor="#fff" />


            </RelativeLayout>


        </android.support.v7.widget.CardView>




    </LinearLayout>

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create a new account"
            android:textSize="25sp"
            android:textColor="@color/colorWhite"

            android:textStyle="bold" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Username"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            app:met_floatingLabel="normal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Email"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:inputType="textEmailAddress"
            app:met_floatingLabel="normal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Password"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:inputType="textPassword"
            app:met_floatingLabel="normal" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:text="register"
            android:textColor="#fff" /> -->




</RelativeLayout>